# TCP_Core

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  conanfile.py
.github/workflows/: release-please.yml
cmake/: declarations.cmake  options.cmake
source/: CMakeLists.txt
source/lib/: test.hpp
source/lib/connection/: acceptor.hpp
source/lib/database/: client.hpp  manager.cpp  manager.hpp
source/lib/request/: client_data.hpp
source/lib/server/: controller.cpp  controller.hpp
source/lib/utilities/: network.cpp  network.hpp
